# SURGE

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BRANCH_STRATEGY.md  CITATION.cff  CONTRIBUTING.md  LICENSE  M3DC1_CAPABILITIES_RESULTS.md  MANIFEST.in  NOTICE  README.md  REFACTORING_SUMMARY.md  REVIEW_CHANGES.md  RUN_HHFW_TEST.md  SECURITY.md  TRAINER_COMPARISON_REPORT.md  UNIFIED_FRAMEWORK_SUMMARY.md  environment.yml  pyproject.toml  requirements-rose-demo.txt  requirements.txt  setup.py  surge-batch-setup  surge_batch_minimal.py  surge_batch_setup.py  test_cv_tuning.py  test_hhfw_dataset.py  test_hhfw_simple.py
.cursor/rules/: surge-conda-m3716.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
configs/: xgc_aparallel_set1.yaml  xgc_aparallel_set1_61cols.yaml  xgc_aparallel_set1_61cols_quick.yaml  xgc_aparallel_set1_shap20.yaml  xgc_aparallel_set1_shap20_quick.yaml  xgc_aparallel_set2_beta0p5.yaml  xgc_aparallel_set2_finetune.yaml  xgc_finetune_smoke.yaml  xgc_model12_finetune.yaml  xgc_modelS_finetune.yaml  xgc_set2_smoke.yaml
data/datasets/: README.md  SAMPLES_README.md
data/logos/: README.md
docs/: ADDING_NEW_MODEL_ADAPTER.md  AUDIT_NIGHT1.md  BATCH_GENERATION_WORKFLOW.md  MODEL_EXTENSION_SUMMARY.md  OPEN_QUESTIONS.md  PRERELEASE.md  PUBLIC_OPEN_SOURCE_PLAN.md  QUICK_START_NEW_MODEL.md  README.md  REFACTORING_PLAN.md  RELEASE_DEMO_PLAN.md  RELEASE_SPRINT.md  ROADMAP.md  ROSE_SURGE_INTEGRATION.md  SURGE_OVERVIEW.md  citation.rst  comparison.md  conf.py  enhanced_models_guide.md  index.rst  installation.rst  overview.rst  plan.md  quickstart.rst  requirements.txt  status.md
docs/agents/: CONTEXT.md  M3DC1_SESSION_CONTEXT_AND_SKILLS.md  README.md  SKILL_SCHEMA.md  skills-manifest.yaml
docs/api_reference/: index.rst  models.rst
docs/dev/: COMMIT_PLAN.md  COMPARISON_WITH_OTHER_TOOLS.md  FNO_INTEGRATION_GUIDE.md  M3DC1_COMMIT_PLAN.md  README.md  XGC_COMMIT_PLAN.md  dev-plan.md
docs/examples/: index.rst
docs/m3dc1/: BATCH_DIRS_AND_DATA.md  DELTA_P_PER_MODE_GUIDE.md  DELTA_P_SPECTRA_TRAINING.md  M3DC1_COMMITS_AND_SUMMARY.md  M3DC1_DATA_MAPPING.md
docs/setup/: DATA_ACCESS.md  ENVIRONMENT_SETUP.md  INSTALLATION.md  QUICKSTART.md  SETUP_SUMMARY.md  WALKTHROUGH.md  setup_environment.sh
docs/xgc/: AI_OCLF_ARCHITECTURE.md  CHANGES_XGC_VIZ_2025-03.md  COMMITS_TO_PUSH.md  DRIFT_DETECTION_POLICY.md  XGC_APARALLEL_DATA.md  XGC_CAPABILITIES.md  XGC_FEATURES_2025-03.md  XGC_INPUT_STRUCTURE.md  XGC_SUMMARY.md  XGC_TRAINING.md
envs/: README.md  environment.yml  environment_gpu.yml  environment_minimal.yml  surge-env-devel.yml
examples/: __init__.py  batch_setup.yml  bayesian_optimization_demo.py  comprehensive_optimization_demo.py  custom_cnn_adapter_template.py  datagen_demo.py  demonstrate_ruff_benefits.py  hyperparameter_optimization_demo.py  m3dc1_workflow.py  pwe_minimal_demo.py  quick_start_demo.py  quickstart.py  run_workflow_profiled.py  simple_optuna_demo.py  simple_optuna_demo_ruff_preview.html  simple_optuna_demo_ruff_preview.py  type_checking_demo.py  unified_surrogate_engine_example.py  visualization_demo.py  viz_enhanced_plots_demo.py  viz_m3dc1_predictions.py
examples/m3dc1/: onnx_inference_demo.py
examples/mlp_ensemble_uq/: mlp_ensemble_uq_demo.py
examples/rose_orchestration/: .gitignore  M3DC1_EXAMPLES.md  README.md  activate_surge_rose_cfs_venv.sh  active_surge_step.py  check_surge_metrics.py  dataset_utils.py  demo_common.py  example_01_rose_inprocess_verbose.py  example_02_rose_subprocess_shell.py  example_03_rose_mlp_random_r2_stop.py  example_04_parallel_model_race.py  example_05_uq_guided_mlp_ensemble.py  launch_all_examples_interactive.sh  live_report.py  mlp_ensemble_uq_demo.py  orch_report.py  quickstart.md  run_all_examples_and_demos.sh  run_m3dc1_smoke.sh  run_rose_example_batch.sh  run_rose_example_interactive.sh  setup_surge_rose_demo_env.sh  sim_surge_step.py  surge_train.py  synthetic_demo_metadata.yaml  verify_demo_env.py  viz_examples_and_demos.py  (+8 more)
notebooks/: RF_Heating_Surrogate_Demo copy.ipynb  RF_Heating_Surrogate_Demo.ipynb  test_load.ipynb
scripts/: README.md  batch_quick_status.py  check_gpflow.py  compute_batch_metrics.py  ml_utils.py  plan_batch_chunks.py  scan_batch_cases.sh  setup_surge_env.sh  submit_batch_plan.sh  update_batch_logs.sh  xgc_datastreamset_comparison.py  xgc_datastreamset_generalization.py  xgc_export_onnx.py  xgc_inference.py  xgc_predictions_animation.py  xgc_spatial_aparallel_animation.py  xgc_workflow_orchestrator.py
surge/: __init__.py  __init__.py~  cli.py  datagen.py  dataset.py  engine.py  gpflow_models.py  helpers.py  launch_batch.sh  metrics.py  models.py  partition_mesh.sh  preprocessing.py  pytorch_models.py  registry.py  trainer.py  utils.py  verify_batch.py  visualization.py
surge_viz/: DEBUG_BUTTON.md  DIAGNOSTIC.md  EMPTY_PAGE_FIX.md  FIXES.md  FIX_NOT_OPENING.md  INSTALL_AND_RUN.md  INSTALL_DEPS.md  QUICK_START.md  README.md  START_APP.md  STREAMLIT_OPTION.md  TROUBLESHOOTING.md  __init__.py  app.py  app_standalone.py  check_app.py  data_ops.py  debug_app.py  demo.py  env.yml  hpc.py  preview_app.py  run.py  simple_app.py  surge_api.py  viz.py
templates/: check_status.sh  run.sh
test_outputs/: hhfw_results.json
tests/: README.md  README_visualization.md  RUN_VISUALIZATION_TEST.md  conftest.py  demo_workflow.py  test_basic.py  test_batch_generation_recipe.py  test_complete_rfr_workflow.py  test_core.py  test_datagen.py  test_dataset.py  test_datasets_m3dc1.py  test_datasets_xgc.py  test_e2e_release_smoke.py  test_engine.py  test_enhanced_models.py  test_enhanced_models_new.py  test_gpflow_uq.py  test_helpers.py  test_m3dc1_workflow_modes.py  test_model_comparison.py  test_model_profiling.py  test_model_registry.py  test_models.py  test_resource_policy.py  test_sklearn_mlp_ensemble.py  test_visualization.py  test_viz_importance.py  test_workflow.py  test_workflow_new.py
xgc_cpp/: CMakeLists.txt  README.md  main_test.cpp  xgc_surrogate_infer.cpp  xgc_surrogate_infer.h
(+106 files in other folders)
