[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surge-ml"
version = "0.1.0"
description = "Surrogate modeling framework for scientific workflows: SciML, AutoML, UQ, and MLOps-style provenance in a declarative pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Álvaro Sánchez Villar" }]
keywords = ["surrogate", "machine learning", "scientific computing", "MLOps"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.5.0",
  "scikit-learn>=1.0.0",
  "joblib>=1.0.0",
  "pandas>=1.5.0",
  "pyarrow>=10.0.0",
  "pyyaml>=6.0.0",
  "matplotlib>=3.5.0",
  "optuna>=3.0.0",
  "scikit-optimize>=0.9.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0"]
# ONNX export of torch models. onnxscript is the exporter backend that
# torch>=2.11 dispatches to when you call torch.onnx.export; without it
# the export silently skips. onnxruntime is the inference runtime used
# by the E2E smoke test to verify numeric parity. Installing the `onnx`
# extra gets you the full export → reload → parity path.
onnx = ["onnx>=1.14", "onnxscript>=0.1", "onnxruntime>=1.17"]
# gpflow = ["tensorflow>=2.8.0,<2.16", "tensorflow-probability>=0.19.0", "gpflow>=2.5.0"]
# h5py is included so M3DC1 batch-mode tests run without an extra install.
dev = ["pytest>=6.0", "pytest-cov", "ruff>=0.1.0", "h5py>=3.0"]
docs = ["sphinx>=5.0", "furo", "myst-parser"]

[project.urls]
Homepage = "https://github.com/S-Villar/SURGE"
Documentation = "https://github.com/S-Villar/SURGE/blob/main/docs/README.md"
Repository = "https://github.com/S-Villar/SURGE"
Issues = "https://github.com/S-Villar/SURGE/issues"

# Install the `surge` Python package from the `surge/` directory.
# Package name on PyPI is `surge-ml` to reduce clash with other projects named "surge".
[tool.setuptools.packages.find]
where = ["."]
include = ["surge*"]

# Scope `pytest` to the actual test suite. Without this, `pytest -q` from the
# repo root walks into scripts/ and examples/ and trips over legacy tutorial
# scripts whose imports reference older SURGE APIs. CI passes because it
# invokes `pytest -q tests/` explicitly; this keeps local runs consistent.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
